# bazelplayground

./: BUILD.bazel  go.mod  main.go
