load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/slintes/bazelplayground
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/slintes/bazelplayground",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bazelplayground",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)


load("@io_bazel_rules_docker//container:image.bzl", "container_image")
container_image(
    name = "emptydir_go_image",
    base = "@go_image_base//image",
    empty_dirs = ["/testdir"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
go_image(
    base = ":emptydir_go_image",
    name = "bazelplayground-image",
    srcs = ["main.go"],
    importpath = "github.com/slintes/bazelplayground",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)